@@ -20,3 +20,7 @@ Changes
 
 Fixes
 =====
+
+- Fixed an issue which could result in lost entries at the ``sys.jobs_log`` and
+  ``sys.operations_log`` tables when the related settings are changed while
+  entries are written.
